--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,10 @@ name = "pypi"
 [dev-packages]
 
 [packages]
+
 "gd2score" = { git = 'https://github.com/brewerja/gd2score.git', ref = 'master' }
 flask = "*"
+gunicorn = "*"
 
 
 [requires]
