--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,9 @@ name = "pypi"
 "python-dotenv" = "*"
 
 [packages]
-"gd2score" = { git = 'https://github.com/brewerja/gd2score.git', ref = 'master' }
-flask = "*"
+"gd2score" = { git = "https://github.com/brewerja/gd2score.git", ref = "master", editable = "true" }
 gunicorn = "*"
+flask = "*"
 
 [requires]
 python_version = "3.6"
