Use new statsapi

--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,12 @@ name = "pypi"
 "python-dotenv" = "*"
 
 [packages]
-"gd2score" = {ref = "master", git = "https://github.com/brewerja/gd2score.git", editable = true}
+"gd2score" = {ref = "printing", git = "https://github.com/brewerja/gd2score.git", editable = true}
 gunicorn = "*"
 flask = "*"
+MLB-statsapi = "*"
 "flask-sslify" = "*"
 "flask-compress" = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
